[package]
name = "toio"
version = "0.1.0"
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2018"
keywords = ["toio", "driver"]
description = "toio driver in Rust"
homepage = "https://github.com/yushiomote/toio-rs"
repository = "https://github.com/yushiomote/toio-rs"
documentation = "https://docs.rs/toio"
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4"
chrono = "0.4"
env_logger = "0.7"
anyhow = "1.0"
futures = "0.3"
derive-new = "0.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
tokio = { version = "0.2", features = ["full"] }
hex-literal = "0.2"
bytes = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core_bluetooth = "0.1"
